2022-12-07  Dirk Eddelbuettel  <edd@debian.org>

	* src/dates.cpp (advanceDate): Add new parameter to select a business
	day convention (via an integer, mapper from character could be added)
	* man/advanceDate.Rd: Updated documentation
	* src/RcppExports.cpp: Updated
	* R/RcppExports.R: Idem
	* inst/include/qlcal_RcppExports.h: Idem

	* tests/calendars.R: Add simple tests

2022-11-10  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/ci.yaml (jobs): Update to actions/checkout@v3

2022-10-19  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.3

	* src/ql/time/calendars/argentina.cpp: Set to utf-8 for clang++-15
	* src/ql/time/calendars/unitedkingdom.cpp: Add the Queen's Funeral
	Bank Holiday from QuantLib 1.28

2022-07-31  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/ql/time/calendar.cpp: Update from QuantLib 1.27
	* src/ql/time/calendar.hpp: Idem
	* src/ql/time/calendars/australia.cpp: Idem
	* src/ql/time/calendars/australia.hpp: Idem
	* src/ql/time/calendars/saudiarabia.cpp: Idem

2022-02-28  Dirk Eddelbuettel  <edd@debian.org>

	* src/dates.cpp (isHoliday): Add missing negation for isBusinessDay

2022-01-21  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2

2022-01-19  Dirk Eddelbuettel  <edd@debian.org>

 	* DESCRIPTION (Version, Date): Roll minor version

	* src/ql/time/calendars/china.cpp: Updated from QuantLib 1.25

2021-12-09  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/ql/time/asx.cpp: Remove file unused by calendaring
	* src/ql/time/dategenerationrule.cpp: Idem
	* src/ql/time/dategenerationrule.hpp: Idem
	* src/ql/time/ecb.cpp: Idem
	* src/ql/time/imm.cpp: Idem
	* src/ql/time/schedule.cpp: Idem
	* src/ql/time/all.hpp: Adjusted accordingly
	* src/Makevars: Idem
	* src/Makevars.win: Idem

2021-12-08  Dirk Eddelbuettel  <edd@debian.org>
