@@ -1,3 +1,13 @@
+2022-12-10  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/dates.cpp (advanceDate): Generalize to wrapper to cal.advance
+	by supporting new arguments for time unit and end-of-month
+	* man/advanceDate.Rd: Updated documentation
+	* src/RcppExports.cpp: Updated
+	* R/RcppExports.R: Idem
+	* inst/include/qlcal_RcppExports.h: Idem
+	* tests/calendars.R: Adjusted test
+
 2022-12-07  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/dates.cpp (advanceDate): Add new parameter to select a business
